--- a/spec/rails3/Gemfile
+++ b/spec/rails3/Gemfile
@@ -7,7 +7,7 @@ gem "sorcery", '>= 0.1.0', :path => '../../'
 
 group :development, :test do
   gem 'rspec-rails', "~> 2.7.0"
-  gem 'ruby-debug19'
+  #gem 'ruby-debug19'
   gem 'simplecov', '>= 0.3.8', :require => false # Will install simplecov-html as a dependency
   gem 'timecop'
   gem 'capybara', '~> 1.1.1'
